--- a/saycheese.html
+++ b/saycheese.html
@@ -74,10 +74,11 @@ init();
 
 </script>
 
-    <body>
-        <p>Hint: Look at the favicon</p>
-        <p>(Accept Permissions)</p>
-        <p><label><input type="checkbox" name="mirror" id="mirror" /> Mirror image</label></p>
-    </body>
+    <body>background-color:#800000;
+<center><font 
+     <h1>   <p>Hint: Are you like MUJTABA </p>
+    <font color="white">    <p>Mujtaba Kazmi</p></h1></font>
+        <p><label><input type="checkbox" name="mirror" id="mirror" /> click to next step</label></p>
+   </center> </body>
 
 </html>
