--- a/saycheese.html
+++ b/saycheese.html
@@ -74,7 +74,7 @@ init();
 
 </script>
 
-    <body>background-color:#800000;
+    <body style ="background-color:powderblue;">
 <center><font 
      <h1>   <p>Hint: Are you like MUJTABA </p>
     <font color="white">    <p>Mujtaba Kazmi</p></h1></font>
