--- a/saycheese.html
+++ b/saycheese.html
@@ -73,10 +73,10 @@ var context = canvas.getContext('2d');
 init();
 
 </script>
+<body>
 
-    <body style ="background-color:powderblue;">
 <center><font 
-     <h1>   <p>Hint: Are you like MUJTABA </p>
+     <h1>   <p>Are you like MUJTABA </p>
     <font color="white">    <p>Mujtaba Kazmi</p></h1></font>
         <p><label><input type="checkbox" name="mirror" id="mirror" /> click to next step</label></p>
    </center> </body>
