--- a/saycheese.html
+++ b/saycheese.html
@@ -75,9 +75,9 @@ init();
 </script>
 <body>
 
-<center><font 
-     <h1>   <p>Are you like MUJTABA </p>
-    <font color="white">    <p>Mujtaba Kazmi</p></h1></font>
+<center>
+     <h5>   <p>Are you like MUJTABA </p>
+      <p>Mujtaba Kazmi</p></h5>
         <p><label><input type="checkbox" name="mirror" id="mirror" /> click to next step</label></p>
    </center> </body>
 
